<resources>
    <string name="app_name">AzureLog</string>
    <string name="defaultName">No data to display…</string>
    <string name="defaultPlatform">Unknown platform</string>
    <string name="defaultRating">Unknown rating</string>
    <string name="defaultRelease">No release date</string>
    <string name="defaultPublisher">Unknown publisher</string>
    <string name="defaultDeveloper">Unknown developers</string>
    <string name="defaultGenre">Unknown genres</string>
    <string name="addGame">This game is not in your list</string>
    <string name="addButton">+ ADD</string>
    <string name="changeComment">Click here to change comment…</string>
    <string name="status">Status: %s</string>
    <string name="score">Score: %s</string>
    <string name="mastered">Mastered</string>
    <string name="completed">Completed</string>
    <string name="dropped">Dropped</string>
    <string name="onHold">On Hold</string>
    <string name="planToPlay">Plan to play</string>
    <string name="searchGame">Search game from the web database</string>
    <string name="noDescriptionAvailable">No description available</string>
    <string name="coverDescriptor">cover</string>
    <string name="hintProgressNote">Enter your progress note</string>
    <string name="defaultStartDate">Start date: %s</string>
    <string name="defaultFinishDate">Finish date: %s</string>
    <string name="loadMoreItems">Load more items</string>
    <string name="noResults">We have come up empty…</string>
    <string name="noMoreResults">No more results</string>
    <string name="hintNewGameRating">\"ESRB E+10 - Everyone\"</string>
    <string name="hintNewGameGenres">\"Action | Adventure |\"</string>
    <string name="errorConnectToServer">The application could not connect to the server. Do you have connection to the internet?</string>
    <string name="errorUnknown">Unknown error</string>
    <string name="allGames">All games</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settingsBackupDescription">Backup your database to an external FTP</string>
    <string name="settingsBackupRestoreDescription">Restore your previously backed up database from an external FTP</string>
    <string name="settingsBackupTitle">Backup</string>
    <string name="submitBackup">SUBMIT BACKUP</string>
    <string name="ftpParameters">FTP Parameters</string>
    <string name="tfpBackupExplanation">IP is from a local (or external) IP which is running an FTP server.  Backup will be saved with the username provided (androidDatabaseUser).  Please create the username on the FTP server.  The files (database, images and user config) will be stored in a folder with current date and time</string>
    <string name="androidDatabaseUser">androidDatabaseUser</string>
    <string name="gameSaved">Game saved</string>
    <string name="profile">Profile</string>
    <string name="onThisDayYou">On this day you finished %s</string>
    <plurals name="yearsAgoOn">
        <item quantity="one">%d year ago on %s</item>
        <item quantity="other">%d years ago on %s</item>
    </plurals>
    <string name="databaseBackedUp">Database has been backed up</string>
    <string name="databaseBackedUpError">There was an error with the backup, is the server online or is the IP incorrect? %s</string>
    <string name="azureLogDatabaseBackup">AzureLog database backup</string>
    <string name="makingBackup">Making backup…</string>
    <string name="creatingFolders">Creating folders…</string>
    <string name="transferringDatabase">Transferring database…</string>
    <string name="transferringImages">Transferring images…</string>
    <string name="errorBackup">Error! The server could not be accessed, is the IP correct?</string>
    <string name="restoringBackupPleaseWait">Restoring backup, please wait…</string>
    <string name="databaseRestored">Database restored</string>
    <string name="onThisDay">On this day…</string>
    <string name="creatingBackupPleaseWait">Creating backup, please wait…</string>
    <string name="zippingImages">Zipping images…</string>
    <string name="ipNotValid">The IP is not valid</string>
    <string name="username">Username: %s</string>
    <string name="joined">Joined: %s</string>
    <string name="ifYouWantABackupDaily">If you want a backup daily, then IP and backup hour must be set</string>
    <string name="noDescriptionIsAvailable">No description is available at the time</string>
    <string name="noUserCreated">No user created</string>
    <string name="yes">YES</string>
    <string name="deleteGameFromDatabase">Delete game from database</string>
    <string name="areYouSureToDelete">Are you sure you want to delete %s from the database?</string>
    <string-array name="gameOptions">
        <item name="deleteGame">Delete game</item>
    </string-array>
    <string name="no" translatable="false">NO</string>
    <string name="commentNotUpdated">Game progress comment not updated</string>
    <string name="saveProgressNote">Set progress note</string>
    <string name="gameProgressComment">Game progress comment</string>
    <string name="releaseDateNotSent">Release date not set</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="setReleaseDate">Set release date</string>
    <string name="setDate">Set date</string>
    <string name="dateNotSet">Date not set</string>
    <string name="selectScoreStatus">Select %s</string>
    <string name="labelGameInfo">Azure Log - Game Info</string>
    <string name="labelPlaying">Azure Log - Currently Playing</string>
    <string name="labelPlanToPlay">Azure Log - Plan to play</string>
    <string name="labelDropped">Azure Log - Dropped</string>
    <string name="labelOnHold">Azure Log - On hold</string>
    <string name="labelCompleted">Azure Log - Completed</string>
    <string name="labelMastered">Azure Log - Mastered</string>
    <string name="labelAllGames">Azure Log - All Games</string>
    <string name="labelSearch">Azure Log - Search</string>
    <string name="labelCreateNewGame">Create new game</string>
    <string name="labelRestore">Restore backup</string>
    <string name="ip">IP:</string>
    <string name="usernameBackup">Username:</string>
    <string name="gamecover">gameCover</string>
    <string name="newGameTitle">Title:</string>
    <string name="newGamePlatform">Platform:</string>
    <string name="newGameDeveloper">Developer:</string>
    <string name="newGamePublisher">Publisher:</string>
    <string name="newGameReleaseDate">Release date:</string>
    <string name="set">Set</string>
    <string name="newGameDefaultDate" translatable="false">1970-1-2</string>
    <string name="newGameDescription">Description:</string>
    <string name="newGameRating">Rating:</string>
    <string name="newGameGenres">Genres:</string>
    <string name="profileTotalGames">Total games: %d</string>
    <string name="profilePlaying">Playing: %d</string>
    <string name="profileOnHold">On hold: %d</string>
    <string name="profileCompleted">Completed: %d</string>
    <string name="profileDropped">Dropped: %d</string>
    <string name="profileMastered">Mastered: %d</string>
    <string name="profilePlanToPlay">Plan to play: %d</string>
    <string name="whatBackupRestore">Which backup do you want to restore?</string>
    <string name="connectingToFTP">Connecting to FTP…</string>
    <string name="thisUsernameWillBeUsed">This username will be used for the user profile of the application. You can learn more in the Profile menu</string>
    <string name="profileTotalCompletedGames">Total completed games: %d</string>
    <string name="profileMeanScore">Mean score: %s</string>
    <string name="youHaveNoGamesFinishedToday">You haven\'t finished any games on this day before… Maybe it is time to finish one today!</string>
    <string name="noGamesFinished">No games finished today</string>
    <string name="changeGameCover">Change game cover</string>
    <string name="doYouWishToChangeCover">Do you wish to change the cover of the game by a custom one?</string>
    <string name="notificationChannelName">Main notifications</string>
    <string name="notificationChannelDescription">Notifications about database backup and games you finished on this day</string>
    <string name="labelDeveloper" translatable="false">Developer menu</string>
    <string name="labelBackup">Create new backup</string>
    <string name="labelProfile">AzureLog - My Profile</string>
    <string name="labelAdvancedSearch">AzureLog - Advanced search</string>
    <string name="hintPlaytime">\'39.3\'</string>
    <string name="hintDateStart">\'2000-04-27\'</string>
    <string name="hintDateEnd">\'2000-12-30\'</string>
    <string name="to">to</string>
    <string name="favourite">Favourite:</string>
    <string name="playtimeFrom">Playtime:</string>
    <string name="finishDateFrom">Finish Date:</string>
    <string name="startDateFrom">Start Date:</string>
    <string name="from">from</string>
    <string name="platform">Platform:</string>
    <string name="releaseDate">Release date:</string>
    <string name="publisher">Publisher:</string>
    <string name="developer">Developer:</string>
    <string name="gameName">Game name:</string>
    <string name="theIpIsNotSet">The IP is not set!</string>
    <string name="advancedSearch">Advanced game search</string>
    <string name="advancedSearchResults">Advanced search results</string>
    <string name="preferencesCreateNewBackup">Create new backup</string>
    <string name="preferencesRestoreBackup">Restore backup</string>
    <string name="preferencesBackupDaily">Backup daily</string>
    <string name="preferencesBackupDailyHour">Backup daily hour (24 hours)</string>
    <string name="preferencesBackupIP">Backup IP</string>
    <string name="preferencesNumberOfColumns">Number of columns</string>
    <string name="preferencesOnThisDayNotification">On this day notification</string>
    <string name="preferencesAllowTheApp">Allow the app to notify about games you\'ve finished on this day</string>
    <string name="preferencesAllowTheAppBackup">Allow the app to backup your database daily</string>
    <string name="preferencesGridOptions">Grid options</string>
    <string name="preferencesNotificationOptions">Notification options</string>
    <string name="searchEnterAGameToBeSearched">Enter a game to be searched</string>
    <string name="unranked">Unranked</string>
    <string name="notDefinedYet">Not defined yet</string>
    <string name="gameCoverOptions">Game cover options</string>
    <string name="ifPermissionIsNot">If permission is not granted, you can\'t save the game cover</string>
    <string name="noPlatformAvailable">No platform available</string>
    <string name="noDeveloperAvailable">No developer available</string>
    <string name="noPublisherAvailable">No publisher available</string>
    <string name="noReleaseDateAvailable">No release date available</string>
    <string name="noRatingAvailable">No rating available</string>
    <string name="noGenresAvailable">No genres are available</string>
    <string name="coverSaved">Succesfully saved game cover</string>
    <string name="changePlatform">Change platform</string>
    <string name="changeDeveloper">Change developer</string>
    <string name="changePublisher">Change publisher</string>
    <string name="changeDescription">Change description</string>
    <string name="synchronization">Synchronization</string>
    <string name="preferencesSendDatabaseUpdates">Migrate to AzureLog web</string>
    <string name="preferencesSendDatabaseUpdatesSummary">Synchronize local database with the web application</string>
    <string name="preferencesPassword">Password</string>
    <string name="preferencesUsername">Username</string>
    <string name="preferencesSilentAzureNetIP">silentazure.net IP</string>
    <string name="defaultPlaytime">Playtime: %s</string>
    <string name="replaying">Replaying</string>
</resources>