<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/progressLoadGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerInParent="true"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:contentDescription="@string/coverDescriptor"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/rlCover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/gamecover" />
                <TextView
                    android:id="@+id/tvTitle"
                    android:background="@drawable/gradient_game_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/gameInfoNameTextSize"
                    android:padding="@dimen/gameInfoTextPadding"
                    android:text="@string/defaultName"
                    android:layout_alignParentBottom="true"/>
                <ImageView
                    android:id="@+id/ivFavourite"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="4dp"
                    android:src="@drawable/not_favourite"/>
                <CheckBox
                    android:id="@+id/cbReplaying"
                    android:layout_width="108dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/replaying"
                    android:background="@color/colorBackgroundLight"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rectangle_playing"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/rlDatabase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackground"/>
                <LinearLayout
                    android:layout_below="@id/rlDatabase"
                    android:id="@+id/wrapperData"
                    android:background="@drawable/rectangle_on_hold"
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:background="@drawable/rectangle_on_hold"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/platform"/>
                        <TextView
                            android:id="@+id/tvPlatform"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/gameInfoTextSize"
                            android:padding="@dimen/gameInfoTextPadding"
                            android:textAlignment="center"
                            android:background="@drawable/rectangle_on_hold"
                            android:text="@string/defaultPlatform"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/developer"/>
                        <TextView
                            android:id="@+id/tvDeveloper"
                            android:background="@drawable/rectangle_on_hold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/gameInfoTextSize"
                            android:padding="@dimen/gameInfoTextPadding"
                            android:textAlignment="center"
                            android:text="@string/defaultDeveloper"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/newGameRating"/>
                        <TextView
                            android:id="@+id/tvRating"
                            android:background="@drawable/rectangle_on_hold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/gameInfoTextSize"
                            android:padding="@dimen/gameInfoTextPadding"
                            android:textAlignment="center"
                            android:text="@string/defaultRating"/>
                        <TextView
                            android:id="@+id/tvStartDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/gameInfoTextSize"
                            android:padding="@dimen/gameInfoTextPadding"
                            android:textAlignment="center"
                            android:text="@string/defaultStartDate"/>
                    </LinearLayout>
                    <LinearLayout
                        android:background="@drawable/rectangle_on_hold"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/publisher"/>
                        <TextView
                            android:id="@+id/tvPublisher"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/gameInfoTextSize"
                            android:padding="@dimen/gameInfoTextPadding"
                            android:textAlignment="center"
                            android:background="@drawable/rectangle_on_hold"
                            android:text="@string/defaultPublisher"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/releaseDate"/>
                        <TextView
                            android:id="@+id/tvRelease"
                            android:background="@drawable/rectangle_on_hold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/gameInfoTextSize"
                            android:padding="@dimen/gameInfoTextPadding"
                            android:textAlignment="center"
                            android:text="@string/defaultRelease"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/newGameGenres"/>
                        <TextView
                            android:id="@+id/tvGenres"
                            android:background="@drawable/rectangle_on_hold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/gameInfoTextSize"
                            android:padding="@dimen/gameInfoTextPadding"
                            android:textAlignment="center"
                            android:text="@string/defaultGenre"/>
                        <TextView
                            android:id="@+id/tvFinishDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/gameInfoTextSize"
                            android:padding="@dimen/gameInfoTextPadding"
                            android:textAlignment="center"
                            android:text="@string/defaultFinishDate"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:id="@+id/tvPlaytime"
                    android:background="@drawable/rectangle_on_hold"
                    android:layout_below="@id/wrapperData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/gameInfoTextSize"
                    android:padding="@dimen/gameInfoTextPadding"
                    android:textAlignment="center"
                    android:text="@string/defaultPlaytime"/>
                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_below="@id/tvPlaytime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/noDescriptionAvailable"
                    android:textSize="@dimen/gameInfoTextSize"
                    android:padding="@dimen/gameInfoDescriptionPadding"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>