<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.RestoreActivity">
    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_grid_text"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ftpParameters"
            android:background="@drawable/rectangle_playing"
            android:padding="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_playing">
            <TextView
                android:id="@+id/ipConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />
            <EditText
                android:id="@+id/etIpToConnect"
                android:layout_toEndOf="@id/ipConnect"
                android:layout_alignBaseline="@id/ipConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:inputType="number"
                android:maxLength="15"/>
            <TextView
                android:id="@+id/backupFTPUsername"
                android:layout_below="@id/ipConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usernameBackup"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />
            <EditText
                android:id="@+id/etFTPUsername"
                android:layout_toEndOf="@id/backupFTPUsername"
                android:layout_alignBaseline="@id/backupFTPUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:enabled="false"
                android:text="@string/androidDatabaseUser"
                android:layout_marginEnd="5dp"/>
        </RelativeLayout>
        <TextView
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/tfpBackupExplanation"/>
    </LinearLayout>
    <Button
        android:id="@+id/buttonSubmitBackup"

        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitBackup"
        android:background="@color/colorSecundarioFAB"/>
</RelativeLayout>