<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/gameGridCardMargin"
    android:layout_centerInParent="true">
    <LinearLayout
        android:id="@+id/statusScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvScore"
            android:background="@drawable/rectangle_red"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/gameInfoTextSize"
            android:padding="@dimen/gameInfoDescriptionPadding"
            android:text="@string/score"/>
        <TextView
            android:id="@+id/tvStatus"
            android:background="@drawable/rectangle_red"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/gameInfoTextSize"
            android:padding="@dimen/gameInfoDescriptionPadding"
            android:text="@string/status"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvComment"
        android:background="@drawable/rectangle_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/gameInfoTextSize"
        android:padding="@dimen/gameInfoDescriptionPadding"
        android:layout_below="@id/statusScore"
        android:text="@string/changeComment"/>
</RelativeLayout>